<resources>
    <string name="app_name">ChatMobile</string>
    <string name="cs_utec">CS-UTEC</string>
    <string name="luis_jauregui">Luis Jauregui</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="text_hint">Escribe aquí</string>
    <string name="button_content"><![CDATA[>]]></string>
    <string name="register">Registrarse</string>
    <string name="author">Luis Jáuregui Vera</string>
</resources>